# linear-elasticity-sbm

LinearElasticity/: CMakeLists.txt  README.md
LinearElasticity/Util/: Build-stampede2.sh  gen_visit_pvd_file.py
LinearElasticity/config/2D_csv_traction/: config.txt  square.msh  traction_square.txt
LinearElasticity/config/2Dibm-time/beam/: config.txt
LinearElasticity/config/2Dibm-time/ibm_LE_time_2circle/: circle.msh  config.txt  gen_visit_pvd_file.py  nova_ibm_compile.txt  run.sh
LinearElasticity/config/2Dibm/2Dibm_2circle/: config.txt
LinearElasticity/config/2Dibm/2Dibm_2circle_traction_inner/: config.txt  icircle.msh
LinearElasticity/config/3D-sphere/: config.txt
LinearElasticity/config/3D-traction/: config.txt
LinearElasticity/config/3D_csv_traction/: config.txt  traction_global.txt
LinearElasticity/config/ForAshton/: config.txt
LinearElasticity/config/ForAshton/2D_MMS_circle/: icircle.msh
LinearElasticity/config/ForAshton/bunny_disp_position/: config.txt
LinearElasticity/config/ForAshton/sphere_disp_position/: config-lvl6.txt  config.txt  sphere.stl
LinearElasticity/config/cantilever/: config.txt  part.stl
LinearElasticity/config/cantilever/SBM_config/: config.txt
LinearElasticity/config_2D_SBM/1circle_paper_SBM/: P1_domain_GP_SBM_near_paper_for2.m  P2_domain_GP_SBM_near_paper_all.m  P3_domain_GP_SBM_near_paper_test_shift.m  circle.msh  config.txt
LinearElasticity/dendrite-kt/include/: TalyMat.h
LinearElasticity/dendrite-kt/include/IO/: VTU.h
LinearElasticity/dendrite-kt/include/PETSc/IO/: petscVTU.h
LinearElasticity/dendrite-kt/include/Traversal/: Refinement.h
LinearElasticity/dendrite-kt/src/IMGA/: IMGA.cpp
LinearElasticity/dendrite-kt/src/IO/: VTU.cpp
LinearElasticity/dendrite-kt/src/PETSc/IO/: petscVTU.cpp
LinearElasticity/dendrite-kt/src/SubDA/: SubDomain.cpp
LinearElasticity/dendrite-kt/src/Traversal/: Refinement.cpp
LinearElasticity/examples/NEUMANN_EXAMPLE/constant_stress/: InputDataOutput.txt  run_2D.sh  traction.csv
LinearElasticity/examples/NEUMANN_EXAMPLE/constant_stress/boundary/: subDA.pvtu
LinearElasticity/examples/NEUMANN_EXAMPLE/constant_stress/results_00000/: leMag_00000.pvtu
LinearElasticity/examples/NEUMANN_EXAMPLE/example_1/: config.txt
LinearElasticity/examples/NEUMANN_EXAMPLE/example_1/Stress/: Stress.pvtu
LinearElasticity/examples/NEUMANN_EXAMPLE/example_1/results/: le.pvtu
LinearElasticity/include/: BFS.h  CalcError.h  CalcStress.h  CheckSurface.h  DACoarse.h  DARefine.h  ElementMarker.h  GetSurfaceGp.h  GetTrueSurfaceGP.h  IMGALoop.h  LEBCSetup.h  LEInputData.h  LEInputDataStructs.h  LENodeData.h  LERefine.h  SBMCalc.h  SSLEEquation.h  TSLEEquation.h  csv_reader.h  util.h
LinearElasticity/src/: SSLE.cpp  TSLE.cpp
